# texor

./: README.md  ingestion.py  main.py  pyproject.toml
graph/: graph.py  state.py
graph/chains/: answer_grader.py  asnwer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py
graph/nodes/: __init__.py  grade_documents.py  retrieve.py
